Some layout bugs fixed and some layout features improved.

--- a/cricketWeb/web/resources/css/mycss.css
+++ b/cricketWeb/web/resources/css/mycss.css
@@ -83,12 +83,14 @@ and open the template in the editor.
 }
  
  .grow{
-     height: 300px;
-     width: 380px;
+    height: 60%;
+    width: 60%;
  }
 
  .grow:hover{
-     -webkit-transform: scale(1.3);
-        -ms-transform: scale(1.3);
-        transform: scale(1.3)
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+
+    
  }
